@@ -217,7 +217,8 @@ public class zxidappdemo extends HttpServlet {
 
 	if (qs.equals("x-foobar") || qs.equals("all")) {
 	    out.print("<p>Output from recursive web service call:<br>\n");
-	    ret = zxidjni.call(cf, zxses, "urn:x-foobar", "http://sp.tas3.pt:8080/zxidservlet/wspdemo?o=B", null, null,
+	    ret = zxidjni.call(cf, zxses, "urn:x-foobar",
+			       "http://sp.tas3.pt:8080/zxidservlet/wspdemo?o=B", null, null,
 			       "<foobar>Do it!</foobar>");
 	    
 	    ret = zxidjni.extract_body(cf, ret);
